// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareSnapshotModal renders with modal closed 1`] = `null`;

exports[`ShareSnapshotModal renders with modal open w/ known username 1`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="ReactModal__Content ReactModal__Content--after-open ShareSnapshotModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <h2
      className="ShareSnapshotModal-title"
    >
      Share a Shapshot
    </h2>
    <div
      className="ShareSnapshotModal-pane u-flexColumn"
    >
      <div
        className="ShareSnapshotModal-description"
      >
        Get a link to a snapshot — a browsable, sharable view of the current state of your Tilt session.
      </div>
      <div>
        <div
          className="ShareSnapshotModal-shareLink"
        >
          <div
            className="ShareSnapshotModal-shareLink-urlBox"
          >
            <p
              className="ShareSnapshotModal-shareLink-url"
            >
              http://test.com
            </p>
          </div>
          <a
            className="ShareSnapshotModal-button ShareSnapshotModal-button--inline"
            href="http://test.com"
            target="_blank"
          >
            Open
          </a>
        </div>
        <div
          className="ShareSnapshotModal-loginState"
        >
          Sharing as 
          <strong>
            tacocat
          </strong>
        </div>
      </div>
    </div>
    <div
      className="ShareSnapshotModal-pane"
    >
      <div
        className="ShareSnapshotModal-description"
      >
        Manage your snapshots on
         
        <a
          href="https://cloud.tilt.dev/snapshots"
          target="_blank"
        >
          TiltCloud
        </a>
         
        →
      </div>
    </div>
  </div>
</div>
`;

exports[`ShareSnapshotModal renders with modal open w/o known username 1`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="ReactModal__Content ReactModal__Content--after-open ShareSnapshotModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <h2
      className="ShareSnapshotModal-title"
    >
      Share a Shapshot
    </h2>
    <div
      className="ShareSnapshotModal-pane u-flexColumn"
    >
      <div
        className="ShareSnapshotModal-description"
      >
        Get a link to a snapshot — a browsable, sharable view of the current state of your Tilt session.
      </div>
      <div>
        <div
          className="ShareSnapshotModal-intro"
        >
          <div
            className="u-inlineBlock"
          >
            <img
              className="ShareSnapshotModal-introImage"
              src="share-snapshot-intro.png"
            />
          </div>
          <div
            className="u-inlineBlock"
          >
            <ul
              className="ShareSnapshotModal-examples"
            >
              <li>
                Share errors easily
              </li>
              <li>
                Explore logs in-context
              </li>
              <li>
                Work together to figure out the problem
              </li>
            </ul>
          </div>
        </div>
        <div
          className="ShareSnapshotModal-getStarted"
        >
          <div
            className="u-inlineBlock"
          >
            Link Tilt to TiltCloud
          </div>
          <form
            action="https://cloud.tilt.dev/start_register_token"
            method="POST"
            onSubmit={[Function]}
            target="_blank"
          >
            <input
              name="token"
              type="hidden"
            />
            <input
              className="ShareSnapshotModal-button ShareSnapshotModal-button--cta"
              type="submit"
              value="Get Started"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ShareSnapshotModal renders without snapshotUrl 1`] = `
<div
  className="ReactModal__Overlay ReactModal__Overlay--after-open"
  onClick={[Function]}
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.75)",
      "bottom": 0,
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    className="ReactModal__Content ReactModal__Content--after-open ShareSnapshotModal"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={Object {}}
    tabIndex="-1"
  >
    <h2
      className="ShareSnapshotModal-title"
    >
      Share a Shapshot
    </h2>
    <div
      className="ShareSnapshotModal-pane u-flexColumn"
    >
      <div
        className="ShareSnapshotModal-description"
      >
        Get a link to a snapshot — a browsable, sharable view of the current state of your Tilt session.
      </div>
      <div>
        <div
          className="ShareSnapshotModal-intro"
        >
          <div
            className="u-inlineBlock"
          >
            <img
              className="ShareSnapshotModal-introImage"
              src="share-snapshot-intro.png"
            />
          </div>
          <div
            className="u-inlineBlock"
          >
            <ul
              className="ShareSnapshotModal-examples"
            >
              <li>
                Share errors easily
              </li>
              <li>
                Explore logs in-context
              </li>
              <li>
                Work together to figure out the problem
              </li>
            </ul>
          </div>
        </div>
        <div
          className="ShareSnapshotModal-getStarted"
        >
          <div
            className="u-inlineBlock"
          >
            Link Tilt to TiltCloud
          </div>
          <form
            action="https://cloud.tilt.dev/start_register_token"
            method="POST"
            onSubmit={[Function]}
            target="_blank"
          >
            <input
              name="token"
              type="hidden"
            />
            <input
              className="ShareSnapshotModal-button ShareSnapshotModal-button--cta"
              type="submit"
              value="Get Started"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
